revamped website v2.0 Yellow accent

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | Sidharth Samal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sidharth Samal</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <!-- Google tag (gtag.js) - Google Analytics -->
+
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1N6YKKLNPB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -13,71 +14,240 @@
     gtag('js', new Date());
     gtag('config', 'G-1N6YKKLNPB');
   </script>
-
 </head>
 <body>
 
-<nav>
-  <a href="index.html" class="active">Home</a>
-  <a href="research.html">Research</a>
-  <a href="publications.html">Publications</a>
-  <a href="teaching.html">Teaching</a>
-  <a href="contact.html">Contact</a>
-</nav>
-<hr>
+<!-- Hamburger Menu (Mobile Only) -->
+<div class="hamburger" id="hamburger">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
 
-<h1>Sidharth Samal</h1>
-<p><strong>ML Researcher | Assistant Professor</strong></p>
-<p><em>AI for Predictive Modeling, Financial Forecasting, and Healthcare Diagnostics</em></p>
-<figure>
-  <img src="assets/images/profile.jpg" alt="Sidharth Samal, Assistant Professor in ML" width="300" height="300">
-  <figcaption>ML Researcher | Assistant Professor</figcaption>
-</figure>
-<h2>About Me</h2>
-<p>
-  I am an Assistant Professor at SRM University-AP with a Ph.D. in Computer Science and Engineering from Siksha ‘O’ Anusandhan University (2025). 
-  My research focuses on <strong>Machine Learning, Multi-Criteria Decision Making (MCDM)</strong>, and <strong>Evolutionary Algorithms</strong>.
-</p>
-<p>
-  I have developed novel hybrid models that reduce forecasting errors by up to <strong>40%</strong> and published in SCIE/ESCI journals such as 
-  <em>Cluster Computing</em> and <em>Applied Soft Computing</em>.
-</p>
+<div class="layout">
 
-<h2>Research Interests</h2>
-<ul>
-  <li>Predictive Modeling & Financial Time-Series Analysis</li>
-  <li>Neural Architecture Optimization using Metaheuristics</li>
-  <li>AI in Healthcare: MRI-based Cancer Detection</li>
-  <li>Ensemble Learning with MCDM Weighting</li>
-  <li>Transfer Learning & Dimensionality Reduction</li>
-</ul>
+  <!-- Sidebar -->
+  <aside class="sidebar">
+    <h1>SIDHARTH</h1>
+    <nav class="menu">
+      <a href="#home">HOME</a>
+      <a href="#research">RESEARCH</a>
+      <a href="#publications">PUBLICATIONS</a>
+      <a href="#teaching">TEACHING</a>
+      <a href="#biography">BIOGRAPHY</a>
+      <a href="#contact">CONTACT</a>
+    </nav>
+  </aside>
 
-<h2>Quick Links</h2>
-<ul>
-  <li><a href="publications.html">Publications (h-index: 6, 140+ citations)</a></li>
-  <li><a href="research.html">Current Research Projects</a></li>
-  <li><a href="teaching.html">Courses Taught</a></li>
-  <li><a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a></li>
-</ul>
+  <!-- Main -->
+  <main class="main">
 
-<hr>
+    <!-- HOME -->
+    <section id="home" class="fade-section">
+      <div class="hero-wrapper">
+        <div class="hero-img">
+          <img src="assets/images/profile.jpeg" alt="Profile" />
+        </div>
+        <div class="hero-text">
+          <h2>MACHINE LEARNING<br>RESEARCHER</h2>
+          <hr>
+          <p>
+            Assistant Professor at SRM University-AP.<br>
+            Focused on predictive modeling, financial forecasting, and diagnostic AI.
+          </p>
+          <div class="signature">Sidharth Samal</div>
+        </div>
+      </div>
+      <a href="#research" class="down-arrow"></a>
+    </section>
+    <div class="page-separator"></div>
 
-<footer>
-  <p><strong>Last updated on 8th September 2025</strong></p>
-  <p>
-    <strong>Sidharth Samal</strong><br>
-    ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a>
+    <!-- RESEARCH -->
+    <section id="research" class="fade-section">
+      <h2>Research</h2>
+      <h3>Ph.D. Research</h3>
+      <p>Hybrid neural optimization integrated with MCDM for robust financial forecasting.</p>
+
+      <h3>Current Focus</h3>
+      <ul>
+        <li>Financial Time-Series Modeling</li>
+        <li>Metaheuristic Neural Optimization</li>
+        <li>Diagnostic Machine Learning in Healthcare</li>
+      </ul>
+
+      <a href="#publications" class="down-arrow"></a>
+    </section>
+    <div class="page-separator"></div>
+
+<!-- PUBLICATIONS -->
+<section id="publications" class="fade-section">
+  <h2>Publications</h2>
+  <p>Google Scholar: 
+    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">
+      View Profile
+    </a>
   </p>
-  <p>
-    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> |
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
-    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> |
-    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> |
-    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> |
-    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">WoS</a>
-  </p>
-</footer>
+
+  <h3 class="pub-heading">Journal Articles <span class="pub-count">(5)</span></h3>
+  <ol class="pub-list compact">
+    <li class="pub-item">
+      Samal, S., &amp; Dash, R. (2025). Developing a two stage optimized random vector functional link neural network based predictor model utilizing a swift crow search algorithm. 
+      <em>Cluster Computing</em>, 28(3), 161. 
+      <span class="tag scie">SCIE</span> 
+      <a href="https://doi.org/10.1007/s10586-024-04789-5" target="_blank" class="doi-link">DOI</a>
+    </li>
+    <li class="pub-item">
+      Samal, S., &amp; Dash, R. (2023). Developing a novel stock index trend predictor model by integrating multiple criteria decision-making with an optimized online sequential extreme learning machine. 
+      <em>Granular Computing</em>, 8(3), 411–440. 
+      <span class="tag esci">ESCI</span> 
+      <a href="https://doi.org/10.1007/s41066-022-00353-5" target="_blank" class="doi-link">DOI</a>
+    </li>
+    <li class="pub-item">
+      Samal, S., &amp; Dash, R. (2022). A Novel MCDM Ensemble Approach of Designing an ELM-Based Predictor for Stock Index Price Forecasting. 
+      <em>Intelligent Decision Technologies</em>, 16(2), 387–406. 
+      <span class="tag esci">ESCI</span> 
+      <a href="https://doi.org/10.3233/IDT-210178" target="_blank" class="doi-link">DOI</a>
+    </li>
+    <li class="pub-item">
+      Samal, S., &amp; Dash, R. (2021). A TOPSIS-ELM framework for stock index price movement prediction. 
+      <em>Intelligent Decision Technologies</em>, 15(2), 201–220. 
+      <span class="tag esci">ESCI</span> 
+      <a href="https://doi.org/10.3233/IDT-200178" target="_blank" class="doi-link">  DOI</a>
+    </li>
+    <li class="pub-item">
+      Dash, R., Samal, S., Dash, R., &amp; Rautray, R. (2019). An integrated TOPSIS crow search-based classifier ensemble: In application to stock index price movement prediction. 
+      <em>Applied Soft Computing</em>, 85, 105784. 
+      <span class="tag scie">SCIE</span> 
+      <a href="https://doi.org/10.1016/j.asoc.2019.105784" target="_blank" class="doi-link">DOI</a>
+    </li>
+  </ol>
+
+  <h3 class="pub-heading">Conference Proceedings <span class="pub-count">(5)</span></h3>
+  <ol class="pub-list compact">
+    <li class="pub-item">
+      Samal, S., &amp; Dash, R. (2022). Stock Index Movement Prediction: A Crow Search-ELM Approach. 
+      In <em>Innovation in Electrical Power Engineering, Communication, and Computing Technology</em>, pp. 349–356. Springer, Singapore. 
+      <a href="https://doi.org/10.1007/978-981-16-7076-3_34" target="_blank" class="doi-link">DOI</a>
+    </li>
+    <li class="pub-item">
+      Samal, S., &amp; Dash, R. (2022). An Empirical Comparison of TOPSIS and VIKOR for Ranking Decision-Making Models. 
+      In <em>Intelligent and Cloud Computing</em>, pp. 429–437. Springer, Singapore. 
+      <a href="https://doi.org/10.1007/978-981-16-9873-6_41" target="_blank" class="doi-link">DOI</a>
+    </li>
+    <li class="pub-item">
+      Samal, S., &amp; Dash, R. (2021). A TWV Classifier Ensemble Framework. 
+      In <em>Intelligent and Cloud Computing</em>, 255–262. Springer, Singapore. 
+      <a href="https://doi.org/10.1007/978-981-15-3971-6_30" target="_blank" class="doi-link">DOI</a>
+    </li>
+    <li class="pub-item">
+      Samal, S., &amp; Dash, R. (2021). A Hybrid Fruit Fly ELM Framework for Stock Index Price Movement Prediction. 
+      In <em>2021 International Conference on Advances in Power, Signal, and Information Technology (APSIT)</em>, pp. 1–5. IEEE. 
+      <a href="https://doi.org/10.1109/APSIT52773.2021.9641278" target="_blank" class="doi-link">DOI</a>
+    </li>
+    <li class="pub-item">
+      Dash, R., Samal, S., Rautray, R., &amp; Dash, R. (2019). A TOPSIS approach of ranking classifiers for stock index price movement prediction. 
+      In <em>Soft Computing in Data Analytics</em>, pp. 665–674. Springer, Singapore. 
+      <a href="https://doi.org/10.1007/978-981-13-0514-6_63" target="_blank" class="doi-link">DOI</a>
+    </li>
+  </ol>
+
+  <h3>Research Metrics <small>(Updated: September 2025)</small></h3>
+  <ul class="metrics">
+    <li><strong>h-Index:</strong> 6</li>
+    <li><strong>i10-Index:</strong> 3</li>
+    <li><strong>Citations:</strong> 136</li>
+  </ul>
+
+  <footer class="pub-footer">
+    <p><strong>Last updated on 8th September 2025</strong></p>
+  </footer>
+
+  <a href="#teaching" class="down-arrow"></a>
+</section>
+    <div class="page-separator"></div>
+
+    <!-- TEACHING -->
+    <section id="teaching" class="fade-section">
+      <h2>Teaching</h2>
+      <p><strong>Assistant Professor</strong>, SRM University-AP</p>
+      <ul>
+        <li>Deep Learning (CSE 457)</li>
+        <li>Machine Learning Lab Instruction</li>
+        <li>Undergraduate Research Mentoring</li>
+      </ul>
+      <a href="#biography" class="down-arrow"></a>
+    </section>
+    <div class="page-separator"></div>
+
+    <!-- BIOGRAPHY -->
+    <section id="biography" class="fade-section">
+      <h2>Biography</h2>
+      <p>
+        I am an Assistant Professor at SRM University-AP specializing in predictive modeling and hybrid machine learning frameworks. 
+        I design robust and interpretable models for forecasting and diagnostic decision-making systems in finance and healthcare.
+      </p>
+      <p>
+        I completed my Ph.D. in CSE from Siksha ‘O’ Anusandhan University, focusing on metaheuristic neural optimization combined with multi-criteria decision making.
+      </p>
+      <a href="#contact" class="down-arrow"></a>
+    </section>
+    <div class="page-separator"></div>
+
+    <!-- CONTACT -->
+    <section id="contact" class="fade-section">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a></p>
+      <p>GitHub: <a href="https://github.com/StormCloudz" target="_blank">StormCloudz</a></p>
+      <p>Google Scholar: <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Profile</a></p>
+      <a href="#home" class="down-arrow top"></a>
+    </section>
+
+  </main>
+</div>
+
+<script>
+/* Highlight Active Section in Sidebar */
+const sections = document.querySelectorAll("section");
+const navLinks = document.querySelectorAll(".menu a");
+function updateHighlight() {
+  let id = "";
+  sections.forEach(sec => {
+    const r = sec.getBoundingClientRect();
+    if (r.top <= window.innerHeight * 0.5 && r.bottom >= window.innerHeight * 0.5) id = sec.id;
+  });
+  navLinks.forEach(l => l.classList.toggle("active", l.getAttribute("href") === "#" + id));
+}
+window.addEventListener("scroll", updateHighlight);
+updateHighlight();
+
+/* Fade-in on Scroll */
+const fadeSections = document.querySelectorAll('.fade-section');
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) entry.target.classList.add('visible');
+  });
+}, { threshold: 0.35 });
+fadeSections.forEach(s => observer.observe(s));
+
+/* Hamburger Menu Toggle */
+const hamburger = document.getElementById('hamburger');
+const sidebar = document.querySelector('.sidebar');
+
+hamburger.addEventListener('click', () => {
+  hamburger.classList.toggle('open');
+  sidebar.classList.toggle('open');
+});
+
+/* Close menu on link click (mobile) */
+navLinks.forEach(link => {
+  link.addEventListener('click', () => {
+    if (window.innerWidth <= 992) {
+      hamburger.classList.remove('open');
+      sidebar.classList.remove('open');
+    }
+  });
+});
+</script>
 
 </body>
 </html>
