--- a/publications.html
+++ b/publications.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Publications | Sidharth Samal</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <!-- Google tag (gtag.js) - Google Analytics -->
+
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1N6YKKLNPB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -16,107 +17,88 @@
 </head>
 <body>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="research.html">Research</a>
-  <a href="publications.html" class="active">Publications</a>
-  <a href="teaching.html">Teaching</a>
-  <a href="contact.html">Contact</a>
-</nav>
-<hr>
+<div class="layout">
 
-<h1>Publications</h1>
+  <aside class="sidebar">
+    <h1>SIDHARTH</h1>
+    <nav class="menu">
+      <a href="index.html">HOME</a>
+      <a href="biography.html">BIOGRAPHY</a>
+      <a href="publications.html" class="active">PUBLICATIONS</a>
+      <a href="contact.html">CONTACT</a>
+      <a href="research.html">RESEARCH</a>
+      <a href="teaching.html">TEACHING</a>
+    </nav>
+  </aside>
 
-<p>Google Scholar: <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Profile Link</a></p>
+  <main class="main">
 
-<h2>Journal Articles</h2>
-<ol>
-  <li>
-    Samal, S., &amp; Dash, R. (2025). Developing a two stage optimized random vector functional link neural network based predictor model utilizing a swift crow search algorithm. 
-    <em>Cluster Computing</em>, 28(3), 161. 
-    <strong>SCIE</strong>, 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-  <li>
-    Samal, S., &amp; Dash, R. (2023). Developing a novel stock index trend predictor model by integrating multiple criteria decision-making with an optimized online sequential extreme learning machine. 
-    <em>Granular Computing</em>, 8(3), 411–440. 
-    <strong>ESCI</strong>, 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-  <li>
-    Samal, S., &amp; Dash, R. (2022). A Novel MCDM Ensemble Approach of Designing an ELM-Based Predictor for Stock Index Price Forecasting. 
-    <em>Intelligent Decision Technologies</em>, 16(2), 387–406. 
-    <strong>ESCI</strong>, 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-  <li>
-    Samal, S., &amp; Dash, R. (2021). A TOPSIS-ELM framework for stock index price movement prediction. 
-    <em>Intelligent Decision Technologies</em>, 15(2), 201–220. 
-    <strong>ESCI</strong>, 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-  <li>
-    Dash, R., Samal, S., Dash, R., &amp; Rautray, R. (2019). An integrated TOPSIS crow search-based classifier ensemble: In application to stock index price movement prediction. 
-    <em>Applied Soft Computing</em>, 85, 105784. 
-    <strong>SCIE</strong>, 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-</ol>
+    <h2>Publications</h2>
 
-<h2>Conference Proceedings</h2>
-<ol>
-  <li>
-    Samal, S., &amp; Dash, R. (2022). Stock Index Movement Prediction: A Crow Search-ELM Approach. 
-    In <em>Innovation in Electrical Power Engineering, Communication, and Computing Technology</em>, pp. 349–356. Springer, Singapore. 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-  <li>
-    Samal, S., &amp; Dash, R. (2022). An Empirical Comparison of TOPSIS and VIKOR for Ranking Decision-Making Models. 
-    In <em>Intelligent and Cloud Computing</em>, pp. 429–437. Springer, Singapore. 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-  <li>
-    Samal, S., &amp; Dash, R. (2021). A TWV Classifier Ensemble Framework. 
-    In <em>Intelligent and Cloud Computing</em>, 255–262. Springer, Singapore. 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-  <li>
-    Samal, S., &amp; Dash, R. (2021). A Hybrid Fruit Fly ELM Framework for Stock Index Price Movement Prediction. 
-    In <em>2021 International Conference on Advances in Power, Signal, and Information Technology (APSIT)</em>, pp. 1–5. IEEE. 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-  <li>
-    Dash, R., Samal, S., Rautray, R., &amp; Dash, R. (2019). A TOPSIS approach of ranking classifiers for stock index price movement prediction. 
-    In <em>Soft Computing in Data Analytics: Proceedings of International Conference on SCDA 2018</em>, pp. 665–674. Springer, Singapore. 
-    <a href="#" target="_blank">DOI</a>
-  </li>
-</ol>
+    <p>Google Scholar: 
+      <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">
+        View Profile
+      </a>
+    </p>
 
-<h2>Research Metrics <small>(Updated: September 2025)</small></h2>
-<ul>
-  <li><strong>h-Index:</strong> 6</li>
-  <li><strong>i10-Index:</strong> 3</li>
-  <li><strong>Citations:</strong> 142</li>
-</ul>
+    <h3>Journal Articles</h3>
+    <ol>
+      <li>
+        Samal, S., &amp; Dash, R. (2025). Developing a two stage optimized random vector functional link neural network based predictor model utilizing a swift crow search algorithm. 
+        <em>Cluster Computing</em>, 28(3), 161. <strong>SCIE</strong>
+      </li>
+      <li>
+        Samal, S., &amp; Dash, R. (2023). Novel stock index trend predictor integrating MCDM with optimized OS-ELM. 
+        <em>Granular Computing</em>, 8(3), 411–440. <strong>ESCI</strong>
+      </li>
+      <li>
+        Samal, S., &amp; Dash, R. (2022). MCDM Ensemble ELM-based Predictor for Stock Forecasting. 
+        <em>Intelligent Decision Technologies</em>, 16(2), 387–406. <strong>ESCI</strong>
+      </li>
+      <li>
+        Samal, S., &amp; Dash, R. (2021). TOPSIS-ELM framework for index movement prediction. 
+        <em>Intelligent Decision Technologies</em>, 15(2), 201–220. <strong>ESCI</strong>
+      </li>
+      <li>
+        Dash, R., Samal, S., et al. (2019). Integrated TOPSIS Crow Search Classifier Ensemble. 
+        <em>Applied Soft Computing</em>, 85, 105784. <strong>SCIE</strong>
+      </li>
+    </ol>
 
-<hr>
+    <h3>Conference Proceedings</h3>
+    <ol>
+      <li>
+        Samal, S., &amp; Dash, R. (2022). Stock Index Movement Prediction: A Crow Search-ELM Approach. 
+        <em>Springer</em>.
+      </li>
+      <li>
+        Samal, S., &amp; Dash, R. (2022). TOPSIS vs VIKOR for Decision Ranking Models. 
+        <em>Springer</em>.
+      </li>
+      <li>
+        Samal, S., &amp; Dash, R. (2021). TWV Classifier Ensemble Framework. 
+        <em>Springer</em>.
+      </li>
+      <li>
+        Samal, S., &amp; Dash, R. (2021). Hybrid Fruit Fly ELM Framework. 
+        <em>IEEE APSIT</em>.
+      </li>
+      <li>
+        Dash, R., Samal, S., et al. (2019). TOPSIS Ranking of Classifiers for Stock Prediction. 
+        <em>Springer</em>.
+      </li>
+    </ol>
 
-<footer>
-  <p><strong>Last updated on 8th September 2025</strong></p>
-  <p>
-    <strong>Sidharth Samal</strong><br>
-    ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a>
-  </p>
-  <p>
-    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> |
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
-    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> |
-    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> |
-    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> |
-    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">WoS</a>
-  </p>
-</footer>
+    <h3>Research Metrics</h3>
+    <ul>
+      <li><strong>h-index:</strong> 6</li>
+      <li><strong>i10-index:</strong> 3</li>
+      <li><strong>Total Citations:</strong> 142</li>
+    </ul>
+
+  </main>
+
+</div>
 
 </body>
 </html>
