--- a/research.html
+++ b/research.html
@@ -2,85 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Research | Sidharth Samal</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <!-- Google tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1N6YKKLNPB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-1N6YKKLNPB');
-  </script>
 </head>
 <body>
+<div class="layout">
+  <aside class="sidebar">
+    <h1>SIDHARTH</h1>
+    <nav class="menu">
+      <a href="index.html">HOME</a>
+      <a href="biography.html">BIOGRAPHY</a>
+      <a href="publications.html">PUBLICATIONS</a>
+      <a href="contact.html">CONTACT</a>
+      <a href="research.html" class="active">RESEARCH</a>
+      <a href="teaching.html">TEACHING</a>
+    </nav>
+  </aside>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="research.html" class="active">Research</a>
-  <a href="publications.html">Publications</a>
-  <a href="teaching.html">Teaching</a>
-  <a href="contact.html">Contact</a>
-</nav>
-<hr>
+  <main class="main">
+    <h2>Research</h2>
 
-<h1>Research</h1>
+    <section>
+      <h3>Ph.D. Dissertation</h3>
+      <p><strong>Title:</strong> Financial Time-Series Analysis: An Integrated Machine Learning-MCDM Approach</p>
+      <ul>
+        <li>Developed a two-stage feature selection framework → reduced prediction error by 40% and dimensionality by 35%.</li>
+        <li>Proposed a novel neural weight optimization using Swift Crow Search → 30% error reduction in forecasting.</li>
+        <li>Analyzed activation functions' impact on convergence stability in neural forecasting models.</li>
+      </ul>
+    </section>
 
-<h2>Ph.D. Dissertation</h2>
-<p><strong>Title:</strong> Financial Time-Series Analysis: An Integrated Machine Learning-MCDM Approach</p>
-<ul>
-  <li>Developed a <strong>two-stage feature selection framework</strong> → reduced prediction error by <strong>40%</strong> and dimensionality by <strong>35%</strong>.</li>
-  <li>Proposed a <strong>novel neural weight optimization</strong> using Swift Crow Search → <strong>30% error reduction</strong> in financial forecasting.</li>
-  <li>Analyzed activation functions' impact on convergence in financial neural networks.</li>
-</ul>
+    <section>
+      <h3>M.Tech. Dissertation</h3>
+      <p><strong>Title:</strong> A TOPSIS Approach of Base Classifier Selection for Crow Search-Based Ensemble</p>
+      <ul>
+        <li>Designed optimized weighted MCDM ensemble for stock index trend prediction.</li>
+        <li>Introduced novel weighted voting for improved financial decision-making.</li>
+      </ul>
+    </section>
 
-<h2>M.Tech. Dissertation</h2>
-<p><strong>Title:</strong> A TOPSIS Approach of Base Classifier Selection for Crow Search-Based Ensemble</p>
-<ul>
-  <li>Designed <strong>optimized weighted MCDM ensemble</strong> for stock index trend prediction.</li>
-  <li>Introduced <strong>novel weighted voting</strong> for improved financial decision-making.</li>
-</ul>
+    <section>
+      <h3>Current Research Projects</h3>
+      <ul>
+        <li><strong>ML in Healthcare:</strong> MRI-based disease prediction pipeline integrating dimensionality reduction and transfer learning.</li>
+        <li><strong>MCDM + Evolutionary Algorithms in Finance:</strong> Neural optimization and feature fusion for robust trend prediction.</li>
+      </ul>
+    </section>
 
-<h2>Current Research Projects</h2>
-<ul>
-  <li>
-    <strong>ML in Healthcare:</strong> Novel frameworks for disease prediction using MRI data with dimensionality reduction and transfer learning.
-  </li>
-  <li>
-    <strong>MCDM + Evolutionary Algorithms in Finance:</strong> Enhancing stock trend prediction via optimized neural networks and hybrid feature selection.
-  </li>
-</ul>
-
-<h2>Research Domains</h2>
-<ul>
-  <li>Predictive Modeling</li>
-  <li>Evolutionary Optimization</li>
-  <li>Multi-Criteria Decision Making (TOPSIS, VIKOR)</li>
-  <li>Lightweight Neural Networks</li>
-  <li>Deep Learning & Computer Vision</li>
-  <li>Time-Series Forecasting</li>
-  <li>Healthcare Diagnostics using AI</li>
-</ul>
-
-<hr>
-
-<footer>
-  <p><strong>Last updated on 8th September 2025</strong></p>
-  <p>
-    <strong>Sidharth Samal</strong><br>
-    ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a>
-  </p>
-  <p>
-    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> |
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
-    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> |
-    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> |
-    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> |
-    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">WoS</a>
-  </p>
-</footer>
-
+    <section>
+      <h3>Research Domains</h3>
+      <ul>
+        <li>Predictive Modeling</li>
+        <li>Evolutionary Optimization</li>
+        <li>Multi-Criteria Decision Making (TOPSIS, VIKOR)</li>
+        <li>Lightweight Neural Networks</li>
+        <li>Deep Learning & Computer Vision</li>
+        <li>Time-Series Forecasting</li>
+        <li>Healthcare Diagnostics using AI</li>
+      </ul>
+    </section>
+  </main>
+</div>
 </body>
 </html>
