--- a/teaching.html
+++ b/teaching.html
@@ -2,94 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Teaching | Sidharth Samal</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <!-- Google tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1N6YKKLNPB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-1N6YKKLNPB');
-  </script>
 </head>
 <body>
+<div class="layout">
+  <aside class="sidebar">
+    <h1>SIDHARTH</h1>
+    <nav class="menu">
+      <a href="index.html">HOME</a>
+      <a href="biography.html">BIOGRAPHY</a>
+      <a href="publications.html">PUBLICATIONS</a>
+      <a href="contact.html">CONTACT</a>
+      <a href="research.html">RESEARCH</a>
+      <a href="teaching.html" class="active">TEACHING</a>
+    </nav>
+  </aside>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="research.html">Research</a>
-  <a href="publications.html">Publications</a>
-  <a href="teaching.html" class="active">Teaching</a>
-  <a href="contact.html">Contact</a>
-</nav>
-<hr>
+  <main class="main">
+    <h2>Teaching</h2>
 
-<h1>Teaching</h1>
+    <section>
+      <h3>Current Position</h3>
+      <p><strong>Assistant Professor</strong><br>SEAS, SRM University-AP<br><em>July 2025 – Present</em></p>
+      <ul>
+        <li><strong>Course Taught:</strong> Deep Learning (CSE 457)</li>
+      </ul>
+    </section>
 
-<h2>Current Position</h2>
-<p><strong>Assistant Professor</strong><br>
-SEAS, SRM University-AP, Andhra Pradesh<br>
-<em>July 2025 – Present</em></p>
-<ul>
-  <li><strong>Course Taught:</strong> Deep Learning (CSE 457)</li>
-</ul>
+    <section>
+      <h3>Previous Teaching Experience</h3>
+      <p><strong>Assistant Professor</strong><br>ASET, Amity University Rajasthan, Jaipur<br><em>April 2025 – July 2025</em></p>
+      <ul>
+        <li>Machine Learning, Deep Learning</li>
+        <li>Curriculum development and student mentoring</li>
+        <li>Hands-on labs in predictive modeling</li>
+      </ul>
 
-<h2>Previous Teaching Experience</h2>
+      <p><strong>Teaching Assistant</strong><br>ITER, Siksha ‘O’ Anusandhan University, Odisha<br><em>March 2019 – March 2022</em></p>
+      <ul>
+        <li>Assisted in core Computer Science courses</li>
+        <li>Conducted lab sessions and assignments</li>
+        <li>Mentored 15+ undergraduate research projects</li>
+        <li>Designed experiments in optimization and ML</li>
+      </ul>
+    </section>
 
-<h3>Assistant Professor</h3>
-<p>ASET, Amity University Rajasthan, Jaipur<br>
-<em>April 2025 – July 2025</em></p>
-<ul>
-  <li>Teaching: Machine Learning, Deep Learning</li>
-  <li>Curriculum development and student mentoring</li>
-  <li>Hands-on labs in predictive modeling</li>
-</ul>
+    <section>
+      <h3>Faculty Development Programs</h3>
+      <ul>
+        <li><strong>June 2025:</strong> AI-Powered Tools for Academic Research Writing – AUR</li>
+        <li><strong>May 2025:</strong> Research Insights in ML & Neural Networks – AUR</li>
+      </ul>
+    </section>
 
-<h3>Teaching Assistant</h3>
-<p>ITER, Siksha ‘O’ Anusandhan University, Odisha<br>
-<em>March 2019 – March 2022</em></p>
-<ul>
-  <li>Assisted in core Computer Science courses</li>
-  <li>Conducted lab sessions and graded assignments</li>
-  <li>Mentored <strong>15+ undergraduate research projects</strong> in AI/ML</li>
-  <li>Designed hands-on experiments in optimization and machine learning</li>
-</ul>
+    <section>
+      <h3>Teaching Philosophy</h3>
+      <p>I emphasize hands-on learning, real-world applications, and critical thinking. Labs integrate coding, visualization, and interpretation to support meaningful understanding.</p>
+    </section>
 
-<h2>Faculty Development Programs (FDPs)</h2>
-<ul>
-  <li>
-    <strong>June 2025:</strong> “AI-Powered Tools for Academic Research Writing” – Amity University Rajasthan
-  </li>
-  <li>
-    <strong>May 2025:</strong> “Research Insights into ML, DL, and Neural Networks” – Amity University Rajasthan
-  </li>
-</ul>
-
-<h2>Teaching Philosophy</h2>
-<p>
-  I emphasize <strong>hands-on learning</strong>, <strong>real-world applications</strong>, and <strong>critical thinking</strong>. 
-  My labs integrate coding, visualization, and model interpretation to prepare students for industry and research.
-</p>
-
-<hr>
-
-<footer>
-  <p><strong>Last updated on 8th September 2025</strong></p>
-  <p>
-    <strong>Sidharth Samal</strong><br>
-    ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharthsamal95@gmail.com">sidharth.s@srmap.edu.in</a>
-  </p>
-  <p>
-    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> |
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
-    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> |
-    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> |
-    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> |
-    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">WoS</a>
-  </p>
-</footer>
-
+  </main>
+</div>
 </body>
 </html>
