--- a/contact.html
+++ b/contact.html
@@ -2,75 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Sidharth Samal</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <!-- Google tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1N6YKKLNPB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-1N6YKKLNPB');
-  </script>
 </head>
 <body>
+<div class="layout">
+  <aside class="sidebar">
+    <h1>SIDHARTH</h1>
+    <nav class="menu">
+      <a href="index.html">HOME</a>
+      <a href="biography.html">BIOGRAPHY</a>
+      <a href="publications.html">PUBLICATIONS</a>
+      <a href="contact.html" class="active">CONTACT</a>
+      <a href="research.html">RESEARCH</a>
+      <a href="teaching.html">TEACHING</a>
+    </nav>
+  </aside>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="research.html">Research</a>
-  <a href="publications.html">Publications</a>
-  <a href="teaching.html">Teaching</a>
-  <a href="contact.html" class="active">Contact</a>
-</nav>
-<hr>
-
-<h1>Contact</h1>
-
-<div style="max-width: 600px; margin: 0 auto; line-height: 1.8;">
-  <p><strong>Sidharth Samal</strong><br>
-  Assistant Professor<br>
-  School of Engineering and Sciences (SEAS)<br>
-  SRM University-AP, Andhra Pradesh, India</p>
-
-  <p><strong>Email:</strong> <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a><br>
-  <strong>Phone:</strong> +91-xxx-xxx-xxxx</p>
-
-  <h2>Connect With Me</h2>
-  <p>
-    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> &nbsp; | &nbsp;
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> &nbsp; | &nbsp;
-    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> &nbsp; | &nbsp;
-    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> &nbsp; | &nbsp;
-    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> &nbsp; | &nbsp;
-    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">Web of Science</a>
-  </p>
-
-  <h2>Office Location</h2>
-  <p>Room XXX, SEAS Building<br>
-  SRM University-AP<br>
-  Neerukonda, Mangalagiri Mandal<br>
-  Guntur District, Andhra Pradesh 522240</p>
+  <main class="main">
+    <h2>Contact</h2>
+    <div class="contact-info">
+      <p>Email: <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a></p>
+      <p>GitHub: <a href="https://github.com/StormCloudz" target="_blank">StormCloudz</a></p>
+      <p>Google Scholar: <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">View Profile</a></p>
+    </div>
+  </main>
 </div>
-
-<hr>
-
-<footer>
-  <p><strong>Last updated on 8th September 2025</strong></p>
-  <p>
-    <strong>Sidharth Samal</strong><br>
-    ML Researcher | Assistant Professor<br>
-    <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a>
-  </p>
-  <p>
-    <a href="https://www.linkedin.com/in/sidharthsamal/" target="_blank">LinkedIn</a> |
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Google Scholar</a> |
-    <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750" target="_blank">Scopus</a> |
-    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank">ResearchGate</a> |
-    <a href="https://orcid.org/0000-0003-1004-5205" target="_blank">ORCID</a> |
-    <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021" target="_blank">WoS</a>
-  </p>
-</footer>
-
 </body>
 </html>
