--- a/index.html
+++ b/index.html
@@ -62,31 +62,59 @@
     </section>
     <div class="page-separator"></div>
 
-    <!-- RESEARCH -->
-    <section id="research" class="fade-section">
-      <h2>Research</h2>
-      <h3>Ph.D. Research</h3>
-      <p>Hybrid neural optimization integrated with MCDM for robust financial forecasting.</p>
+<!-- RESEARCH -->
+<section id="research" class="fade-section">
+  <h2>Research</h2>
 
-      <h3>Current Focus</h3>
-      <ul>
-        <li>Financial Time-Series Modeling</li>
-        <li>Metaheuristic Neural Optimization</li>
-        <li>Diagnostic Machine Learning in Healthcare</li>
-      </ul>
+  <div class="research-overview">
+    <p>
+      My research bridges <strong>machine learning</strong> and <strong>decision sciences</strong>, developing <em>robust, interpretable models</em> for high-stakes applications. Drawing from metaheuristic optimization and MCDM, I focus on predictive systems that deliver actionable insights in <strong>finance</strong> and <strong>healthcare</strong>.
+    </p>
+    <p>
+      With expertise in processing <strong>MRI/CT scans</strong>, <strong>microarray genomics data</strong>, and <strong>evolutionary algorithms</strong>, I design <strong>lightweight neural architectures</strong> for edge deployment and real-time diagnostics.
+    </p>
+  </div>
 
-      <a href="#publications" class="down-arrow"></a>
-    </section>
-    <div class="page-separator"></div>
+  <div class="research-areas">
+    <h3>1. Time-Series Forecasting</h3>
+    <ul class="area-bullets">
+      <!-- <li>Hybrid ELM predictors tuned by <strong>Crow Search</strong> and <strong>Fruit Fly algorithms</strong> for stock index trends (SCIE: <em>Cluster Computing</em>, 2025; <em>Applied Soft Computing</em>, 2019).</li>
+      <li>MCDM-integrated OS-ELM for movement prediction (ESCI: <em>Granular Computing</em>, 2023; <em>Intelligent Decision Technologies</em>, 2022).</li> -->
+    </ul>
+
+    <h3>2. Healthcare Diagnostics & Medical Imaging</h3>
+    <ul class="area-bullets">
+      <!-- <li>Ensemble classifiers for <strong>MRI/CT image analysis</strong> and <strong>genomics biomarker discovery</strong> using granular computing (ongoing; builds on ELM frameworks).</li>
+      <li>Explainable AI for diagnostic decision-making, leveraging <strong>microarray data</strong> and lightweight NNs for edge devices.</li> -->
+    </ul>
+
+    <h3>3. Evolutionary Neural Optimization</h3>
+    <ul class="area-bullets">
+      <!-- <li>Metaheuristic-tuned RVFL and TOPSIS-ELM for low-latency inference (Conference: Springer, 2022; IEEE APSIT, 2021).</li>
+      <li>VIKOR/TOPSIS comparisons for ranking lightweight architectures in resource-constrained environments.</li> -->
+    </ul>
+  </div>
+
+  <div class="core-expertise">
+    <h3>Core Expertise</h3>
+    <p>Evolutionary algorithms, lightweight NNs, medical data processing (MRI/CT, genomics), MCDM.</p>
+  </div>
+
+  <a href="#publications" class="down-arrow"></a>
+</section>
+<div class="page-separator"></div>
 
 <!-- PUBLICATIONS -->
 <section id="publications" class="fade-section">
   <h2>Publications</h2>
-  <p>Google Scholar: 
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">
-      View Profile
+
+  <!-- GOOGLE SCHOLAR CARD (same style as Contact) -->
+  <div class="pub-scholar-card">
+    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank" class="social-icon" title="Google Scholar">
+      <img src="assets/images/Gscholar_logo.png" alt="Google Scholar">
+      <!-- <span>Google Scholar</span> -->
     </a>
-  </p>
+  </div>
 
   <h3 class="pub-heading">Journal Articles <span class="pub-count">(5)</span></h3>
   <ol class="pub-list compact">
@@ -112,7 +140,7 @@
       Samal, S., &amp; Dash, R. (2021). A TOPSIS-ELM framework for stock index price movement prediction. 
       <em>Intelligent Decision Technologies</em>, 15(2), 201–220. 
       <span class="tag esci">ESCI</span> 
-      <a href="https://doi.org/10.3233/IDT-200178" target="_blank" class="doi-link">  DOI</a>
+      <a href="https://doi.org/10.3233/IDT-200178" target="_blank" class="doi-link">DOI</a>
     </li>
     <li class="pub-item">
       Dash, R., Samal, S., Dash, R., &amp; Rautray, R. (2019). An integrated TOPSIS crow search-based classifier ensemble: In application to stock index price movement prediction. 
@@ -151,56 +179,141 @@
     </li>
   </ol>
 
-  <h3>Research Metrics <small>(Updated: September 2025)</small></h3>
-  <ul class="metrics">
-    <li><strong>h-Index:</strong> 6</li>
-    <li><strong>i10-Index:</strong> 3</li>
-    <li><strong>Citations:</strong> 136</li>
-  </ul>
+ <h3>Research Metrics <small>(Updated: November 2025)</small></h3>
+<div class="metrics-inline">
+  <span class="metric-item"><strong>h-Index:</strong> 6</span>
+  <span class="metric-item"><strong>i10-Index:</strong> 3</span>
+  <span class="metric-item"><strong>Citations:</strong> 143</span>
+</div>
 
   <footer class="pub-footer">
-    <p><strong>Last updated on 8th September 2025</strong></p>
+    <p><strong>Last updated on 10th November 2025</strong></p>
   </footer>
 
   <a href="#teaching" class="down-arrow"></a>
 </section>
-    <div class="page-separator"></div>
+<div class="page-separator"></div>
 
-    <!-- TEACHING -->
-    <section id="teaching" class="fade-section">
-      <h2>Teaching</h2>
-      <p><strong>Assistant Professor</strong>, SRM University-AP</p>
-      <ul>
-        <li>Deep Learning (CSE 457)</li>
-        <li>Machine Learning Lab Instruction</li>
-        <li>Undergraduate Research Mentoring</li>
-      </ul>
-      <a href="#biography" class="down-arrow"></a>
-    </section>
-    <div class="page-separator"></div>
+<!-- TEACHING -->
+<section id="teaching" class="fade-section">
+  <h2>Teaching</h2>
 
-    <!-- BIOGRAPHY -->
-    <section id="biography" class="fade-section">
-      <h2>Biography</h2>
-      <p>
-        I am an Assistant Professor at SRM University-AP specializing in predictive modeling and hybrid machine learning frameworks. 
-        I design robust and interpretable models for forecasting and diagnostic decision-making systems in finance and healthcare.
-      </p>
-      <p>
-        I completed my Ph.D. in CSE from Siksha ‘O’ Anusandhan University, focusing on metaheuristic neural optimization combined with multi-criteria decision making.
-      </p>
-      <a href="#contact" class="down-arrow"></a>
-    </section>
-    <div class="page-separator"></div>
+  <div class="teaching-intro">
+    <p><strong>Assistant Professor</strong> — Department of Computer Science & Engineering</p>
+    <p>SRM University-AP, Andhra Pradesh</p>
+  </div>
 
-    <!-- CONTACT -->
-    <section id="contact" class="fade-section">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a></p>
-      <p>GitHub: <a href="https://github.com/StormCloudz" target="_blank">StormCloudz</a></p>
-      <p>Google Scholar: <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank">Profile</a></p>
-      <a href="#home" class="down-arrow top"></a>
-    </section>
+  <div class="teaching-grid">
+    <!-- Course 1 -->
+    <div class="teaching-card">
+      <div class="card-icon">Teaching</div>
+      <h3>Deep Learning</h3>
+      <p class="course-code">CSE 457 | B.Tech (4th Year)</p>
+      <p>Advanced neural architectures: CNNs, RNNs, LSTMs, GANs. Hands-on with <strong>TensorFlow</strong>. Focus on real-world deployment and interpretability.</p>
+    </div>
+
+    <!-- Course 2
+    <div class="teaching-card">
+      <div class="card-icon">Code</div>
+      <h3>Advanced Machine Learning</h3>
+      <p class="course-code">CSE 458 | M.Tech (1st Year)</p>
+      <p>Ensemble methods, metaheuristic optimization (Crow Search, Fruit Fly), ELM, MCDM integration. Students build <strong>financial forecasting models</strong> and publish in conference proceedings.</p>
+    </div> -->
+
+<!-- Mentoring -->
+<div class="teaching-card">
+  <div class="card-icon">Mentoring</div>
+  <h3>Research Supervision</h3>
+  <p class="course-code">B.Tech Projects</p>
+  <p>
+    Mentoring <strong>10+ student groups</strong> (B.Tech) in solving <strong>real-world problems</strong> using ML/DL. 
+  </p>
+</div>
+
+  <a href="#biography" class="down-arrow"></a>
+</section>
+<div class="page-separator"></div>
+
+<!-- BIOGRAPHY -->
+<section id="biography" class="fade-section">
+  <h2>Biography</h2>
+
+  <div class="bio-content">
+    <p>
+      I am an <strong>Assistant Professor</strong> in the Department of Computer Science and Engineering at <strong>SRM University-AP</strong>. My research focuses on <em>predictive modeling</em>, <em>hybrid neural networks</em>, and <em>metaheuristic optimization</em> for applications in <strong>financial forecasting</strong> and <strong>healthcare diagnostics</strong>.
+    </p>
+
+    <p>
+      I completed my <strong>Ph.D. in Computer Science & Engineering</strong> from <em>Siksha 'O' Anusandhan (Deemed to be University), Bhubaneswar, Odisha, India</em> (2025), where I developed optimized Lightweight Neural Networks using MCDM and Evolutionary Optimization algorithms. My work has been published in <strong>SCIE/ESCI journals</strong> with over <strong>136 citations</strong>.
+    </p>
+
+    <div class="bio-timeline-simple">
+      <div class="bio-entry">
+        <strong>2025 – Present</strong><br>
+        Assistant Professor, SRM University-AP
+      </div>
+      <div class="bio-entry">
+        <strong>2018 – 2023</strong><br>
+        Ph.D., Siksha 'O' Anusandhan (Deemed to be University), Bhubaneswar, Odisha, India<br>
+        <em>Thesis: Financial Time Series Analysis: An Integrated Machine Learning-MCDM Approach</em><br>
+        <em><strong>Advisor:  Prof. (Dr.) Rajashree Dash</strong></em>
+      </div>
+      <div class="bio-entry">
+        <strong>2016 – 2018</strong><br>
+        M.Tech in CSE, Siksha 'O' Anusandhan (Deemed to be University), Bhubaneswar, Odisha, India<br>
+        <em>Thesis: To be Updated...</em>
+      </div>
+    </div>
+
+    <!-- <div class="bio-highlights">
+      <span><strong>10</strong> Publications</span>
+      <span><strong>6</strong> h-index</span>
+      <span><strong>143</strong> Citations</span>
+    </div> -->
+  </div>
+
+  <a href="#contact" class="down-arrow"></a>
+</section>
+<div class="page-separator"></div>
+
+<!-- CONTACT -->
+<section id="contact" class="fade-section">
+  <h2>Contact</h2>
+
+  <div class="contact-info">
+    <p><strong>Email:</strong> <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a></p>
+    <p><strong>GitHub:</strong> <a href="https://github.com/StormCloudz" target="_blank">StormCloudz</a></p>
+  </div>
+
+  <!-- CREATIVE YELLOW HEADING -->
+  <div class="social-heading-wrapper">
+    <h3 class="social-heading">
+      <span class="accent-left"></span>
+      <span class="accent-center">Find me on</span>
+      <span class="accent-right"></span>
+    </h3>
+  </div>
+
+  <div class="social-links">
+    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank" class="social-icon" title="Google Scholar">
+      <img src="assets/images/Gscholar_logo.png" alt="Google Scholar">
+    </a>
+    <a href="https://orcid.org/0000-0002-1234-5678" target="_blank" class="social-icon" title="ORCID">
+      <img src="assets/images/ORCID_logo.png" alt="ORCID">
+    </a>
+    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank" class="social-icon" title="ResearchGate">
+      <img src="assets/images/researchgate.png" alt="ResearchGate">
+    </a>
+    <a href="https://www.scopus.com/authid/detail.uri?authorId=57216678900" target="_blank" class="social-icon" title="Scopus">
+      <img src="assets/images/scopus.png" alt="Scopus">
+    </a>
+    <a href="https://www.webofscience.com/wos/author/record/ABC-1234" target="_blank" class="social-icon" title="Web of Science">
+      <img src="assets/images/wos.png" alt="Web of Science">
+    </a>
+  </div>
+
+  <a href="#home" class="down-arrow top"></a>
+</section>
 
   </main>
 </div>
