minor changes for SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sidharth Samal</title>
+  <title>Sidharth Samal | Machine Learning Researcher & Assistant Professor</title>
+  <meta name="description" content="Official portfolio of Sidharth Samal, Assistant Professor at SRM University-AP. Research focus: Hybrid Machine Learning, Time-Series Forecasting, and Healthcare Diagnostics using Evolutionary Algorithms." />
   <link rel="stylesheet" href="assets/style.css" />
 
   <!-- Google Analytics -->
@@ -14,6 +15,31 @@
     gtag('js', new Date());
     gtag('config', 'G-1N6YKKLNPB');
   </script>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Sidharth Samal",
+  "url": "https://stormcloudz.github.io/",
+  "jobTitle": "Assistant Professor, Machine Learning Researcher",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "SRM University-AP"
+  },
+  "alumniOf": {
+    "@type": "Organization",
+    "name": "Siksha 'O' Anusandhan (Deemed to be University)"
+  },
+  "sameAs": [
+    "https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en",
+    "https://www.linkedin.com/in/sidharthsamal",
+    "https://orcid.org/0000-0003-1004-5205",
+    "https://github.com/StormCloudz"
+  ]
+}
+</script>
+
 </head>
 <body>
 
@@ -28,7 +54,7 @@
 
   <!-- Sidebar -->
   <aside class="sidebar">
-    <h1>SIDHARTH</h1>
+    <h2>SIDHARTH</h2>
     <nav class="menu">
       <a href="#home">HOME</a>
       <a href="#research">RESEARCH</a>
@@ -49,13 +75,14 @@
           <img src="assets/images/profile.jpeg" alt="Profile" />
         </div>
         <div class="hero-text">
-          <h2>MACHINE LEARNING<br>RESEARCHER</h2>
-          <hr>
+          <div class="signature"><h1>Sidharth Samal</h1><hr></div> <h2>MACHINE LEARNING<br>RESEARCHER</h2> <hr>
+          <!-- <h2>MACHINE LEARNING<br>RESEARCHER</h2> -->
+          <!-- <hr> -->
           <p>
             Assistant Professor at SRM University-AP.<br>
             Focused on predictive modeling, financial forecasting, and diagnostic AI.
           </p>
-          <div class="signature">Sidharth Samal</div>
+          <!-- <div class="signature">Sidharth Samal</div> -->
         </div>
       </div>
       <a href="#research" class="down-arrow"></a>
@@ -281,9 +308,11 @@
   <h2>Contact</h2>
 
   <div class="contact-info">
-    <p><strong>Email:</strong> <a href="mailto:sidharth.s@srmap.edu.in">sidharth.s@srmap.edu.in</a></p>
-    <p><strong>GitHub:</strong> <a href="https://github.com/StormCloudz" target="_blank">StormCloudz</a></p>
-  </div>
+  <p>
+    <strong>Email:</strong>
+    <span>sidharth.s[at]srmap[dot]edu[dot]in</span>
+  </p>
+</div>
 
   <!-- CREATIVE YELLOW HEADING -->
   <div class="social-heading-wrapper">
@@ -294,23 +323,47 @@
     </h3>
   </div>
 
-  <div class="social-links">
-    <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en" target="_blank" class="social-icon" title="Google Scholar">
-      <img src="assets/images/Gscholar_logo.png" alt="Google Scholar">
-    </a>
-    <a href="https://orcid.org/0000-0002-1234-5678" target="_blank" class="social-icon" title="ORCID">
-      <img src="assets/images/ORCID_logo.png" alt="ORCID">
-    </a>
-    <a href="https://www.researchgate.net/profile/Sidharth-Samal" target="_blank" class="social-icon" title="ResearchGate">
-      <img src="assets/images/researchgate.png" alt="ResearchGate">
-    </a>
-    <a href="https://www.scopus.com/authid/detail.uri?authorId=57216678900" target="_blank" class="social-icon" title="Scopus">
-      <img src="assets/images/scopus.png" alt="Scopus">
-    </a>
-    <a href="https://www.webofscience.com/wos/author/record/ABC-1234" target="_blank" class="social-icon" title="Web of Science">
-      <img src="assets/images/wos.png" alt="Web of Science">
-    </a>
-  </div>
+<div class="social-links">
+  <a href="https://scholar.google.co.in/citations?user=RoRMRZ4AAAAJ&hl=en"
+     target="_blank" class="social-icon size-gs" title="Google Scholar">
+    <img src="assets/images/Gscholar_logo.png" alt="Google Scholar">
+  </a>
+
+  <a href="https://orcid.org/0000-0003-1004-5205"
+     target="_blank" class="social-icon size-orcid" title="ORCID">
+    <img src="assets/images/ORCID_logo.png" alt="ORCID">
+  </a>
+
+  <a href="https://www.researchgate.net/profile/Sidharth-Samal"
+     target="_blank" class="social-icon size-rg" title="ResearchGate">
+    <img src="assets/images/researchgate.png" alt="ResearchGate">
+  </a>
+
+  <a href="https://www.scopus.com/authid/detail.uri?authorId=57203780750"
+     target="_blank" class="social-icon size-scopus" title="Scopus">
+    <img src="assets/images/scopus.png" alt="Scopus">
+  </a>
+
+  <a href="https://www.webofscience.com/wos/author/record/AAZ-2131-2021"
+     target="_blank" class="social-icon size-wos" title="Web of Science">
+    <img src="assets/images/wos.png" alt="Web of Science">
+  </a>
+
+  <a href="https://www.linkedin.com/in/sidharthsamal"
+     target="_blank" class="social-icon size-linkedin" title="LinkedIn">
+    <img src="assets/images/linkedin.png" alt="LinkedIn">
+  </a>
+
+  <!-- <a href="mailto:sidharth.s@srmap.edu.in"
+     target="_blank" class="social-icon size-gmail" title="Gmail">
+    <img src="assets/images/gmail.webp" alt="Gmail">
+  </a> -->
+
+  <a href="https://github.com/StormCloudz"
+     target="_blank" class="social-icon size-github" title="GitHub">
+    <img src="assets/images/github.png" alt="GitHub">
+  </a>
+</div>
 
   <a href="#home" class="down-arrow top"></a>
 </section>
